<resources>
    <string name="app_name">bugu</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">ddl日历</string>
    <string name="title_notifications">统计分析</string>
    <string name="title_settings">设置</string>
    <string name="cancel">取消</string>
    <string name="thisweek">本周</string>
    <string name="taskfinish">任务完成情况</string>
    <string name="tasktype">任务类型分布</string>
    <string name="timeline">Timeline</string>
    <string name="settings">设置</string>
    <string name="name_id">时间管理达人</string>
    <string name="ddl_">不拖DDL 从我做起</string>
    <string name="text1">个性化</string>
    <string name="text2">课程表</string>
    <string name="text3">课程细节</string>
    <string name="MonthTitleName">July</string>
    <string name="DayTitleName">23rd</string>
    <string name="text4">日程习惯偏好</string>
    <string name="text5">帮助</string>
    <string name="calendar_today">Today</string>
    <string name="Course">课程名称</string>
    <string name="place">上课地点</string>
    <string name="diff">课程难度</string>
    <string name="Text">文字</string>
    <string name="Voice">语音</string>
    <string name="Gallery">图片</string>
    <string name="schedule_event_detail_setting">Detail setting</string>
    <string-array name="calendar_month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="calendar_day">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
        <item>9th</item>
        <item>10th</item>
        <item>11th</item>
        <item>12th</item>
        <item>13th</item>
        <item>14th</item>
        <item>15th</item>
        <item>16th</item>
        <item>17th</item>
        <item>18th</item>
        <item>19th</item>
        <item>20th</item>
        <item>21st</item>
        <item>22nd</item>
        <item>23rd</item>
        <item>24th</item>
        <item>25th</item>
        <item>26th</item>
        <item>27th</item>
        <item>28th</item>
        <item>29th</item>
        <item>30th</item>
        <item>31st</item>
    </string-array>
    <string name="finish">完成</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses">课程表</string>
    <string name="Camera">相机</string>
<string name="app_id">c6244600</string>
<string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
<string name="text_tts_source">
        科大讯飞作为智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有技术成果。科大讯飞是我国以语音技术为产业化方向的“国家863计划产业化基地”.....
    </string>
<string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
<string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
<string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
<string name="text_begin">请开始说话…</string>
<string name="text_begin_recognizer">开始音频流识别</string>
<string name="text_begin_ise">开始音频流评测</string>
<string name="text_upload_userwords">上传用户词表</string>
<string name="text_upload_success">上传成功</string>
<string name="text_userword_empty">词表下载失败或内容为空</string>
<string name="text_download_success">下载成功</string>
<string name="pref_key_iat_show">iat_show</string>
<string name="pref_title_iat_show">显示听写界面</string>
<string name="text_show_contacts">上传词表显示</string>
<string name="text_show_iat_result">听写结果显示</string>
<string name="pref_key_translate">translate</string>
<string name="pref_title_translate">翻译</string>
<string name="face_model_delete">人脸模型删除</string>
<string name="title_face_idf">人脸1:N检索示例</string>
<string name="title_vocal_idf">声纹1:N检索示例</string>
<string-array name="engine_entries">
    <item>本地合成</item>
    <item>在线合成</item>
</string-array>
<string-array name="engine_values">
    <item>local</item>
    <item>cloud</item>
</string-array>
<string-array name="voicer_cloud_entries">
    <item>小燕—女青、中英、普通话</item>
    <item>小宇—男青、中英、普通话</item>
    <item>凯瑟琳—女青、英</item>
    <item>亨利—男青、英</item>
    <item>玛丽—女青、英</item>
    <item>小研—女青、中英、普通话</item>
    <item>小琪—女青、中英、普通话</item>
    <item>小峰—男青、中英、普通话</item>
    <item>小梅—女青、中英、粤语</item>
    <item>小莉—女青、中英、台湾普通话</item>
    <item>小蓉—女青、中、四川话</item>
    <item>小芸—女青、中、东北话</item>
    <item>小坤—男青、中、河南话</item>
    <item>小强—男青、中、湖南话</item>
    <item>小莹—女青、中、陕西话</item>
    <item>小新—男童、中、普通话</item>
    <item>楠楠—女童、中、普通话</item>
    <item>老孙—男老、中、普通话</item>
</string-array>
<string-array name="voicer_cloud_values">
    <item>xiaoyan</item>
    <item>xiaoyu</item>
    <item>catherine</item>
    <item>henry</item>
    <item>vimary</item>
    <item>vixy</item>
    <item>xiaoqi</item>
    <item>vixf</item>
    <item>xiaomei</item>
    <item>xiaolin</item>
    <item>xiaorong</item>
    <item>xiaoqian</item>
    <item>xiaokun</item>
    <item>xiaoqiang</item>
    <item>vixying</item>
    <item>xiaoxin</item>
    <item>nannan</item>
    <item>vils</item>
</string-array>
<string-array name="emot_entries">
    <item>正常</item>
    <item>高兴</item>
    <item>悲伤</item>
    <item>生气</item>
</string-array>
<string-array name="emot_values">
    <item>neutral</item>
    <item>happy</item>
    <item>sad</item>
    <item>angry</item>
</string-array>
<string-array name="stream_entries">
    <item>通话</item>
    <item>系统</item>
    <item>铃声</item>
    <item>音乐</item>
    <item>闹铃</item>
    <item>通知</item>
</string-array>
<string-array name="stream_values">
    <item>0</item>
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
</string-array>
<string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>
<string-array name="language_entries">
    <item>普通话</item>
    <item>粤语</item>
    <item>英语</item>
</string-array>
<string-array name="language_values">
    <item>mandarin</item>
    <item>cantonese</item>
    <item>en_us</item>
</string-array>
<string name="text_en_word">"[word]\napple\nbanana\norange"</string>
<string name="text_en_sentence">"The quick brown fox jumps over the lazy dog."</string>
<string name="text_en_chapter">"It is never too old to learn, A good beginning makes a good ending."</string>
<string name="text_en_simple_expression">"W2Nob2ljZV0KMS4gV2hhdCBzaG91bGQgSSBkbyB3aXRoIHRoZSB0b3BpYz8KMi4gSG93IGNhbiBJIGRlYWwgd2l0aCB0aGUgdG9waWM/CjMuIFdoYXQgY2FuIEkgZG8gd2l0aCB0aGUgdG9waWM/CjQuIFdoYXQgc2hvdWxkIEkgZG8gd2l0aCB0aGlzIHN1YmplY3Q/CjUuIEhvdyBjYW4gSSBkZWFsIHdpdGggdGhpcyBzdWJqZWN0Pwo2LiBXaGF0IGNhbiBJIGRvIHdpdGggdGhpcyBzdWJqZWN0Pwo3LiBXaGF0IHNob3VsZCBJIGRvIHdpdGggdGhpcyB0aXRsZT8KOC4gSG93IGNhbiBJIGRlYWwgd2l0aCB0aGlzIHRpdGxlPwo5LiBXaGF0IGNhbiBJIGRvIHdpdGggdGhpcyB0aXRsZT8KMTAuIFdoYXQgc2hvdWxkIEkgbWFuYWdlIHRoaXMgdGl0bGU/CjExLiBIb3cgY2FuIEkgbWFuYWdlIHRoaXMgdGl0bGU/CjEyLiBXaGF0IGNhbiBJIG1hbmFnZSB0aGlzIHRpdGxlPwoxMy4gV2hhdCBzaG91bGQgSSBtYW5hZ2UgdGhpcyBzdWJqZWN0PwoxNC4gSG93IGNhbiBJIG1hbmFnZSB0aGlzIHN1YmplY3Q/CjE1LiBXaGF0IHNob3VsZCBJIG1hbmFnZSB0aGlzIHRvcGljPwoxNi4gSG93IGNhbiBJIG1hbmFnZSB0aGlzIHRvcGljPwoxNy4gV2hhdCBjYW4gSSBtYW5hZ2UgdGhpcyB0b3BpYz8KMTguIEhvdyBzaG91bGQgSSBkZWFsIHdpdGggdGhpcyB0b3BpYz8KMTkuIEhvdyBzaG91bGQgSSBkZWFsIHdpdGggdGhpcyB0aXRsZT8KMjAuIEhvdyBzaG91bGQgSSBkZWFsIHdpdGggdGhpcyBzdWJqZWN0Pwpba2V5d29yZHNdCndoYXQgZG8gdG9waWMgfCBob3cgZGVhbCB0b3BpYyB8IHdoYXQgZG8gc3ViamVjdCB8IGhvdyBkZWFsIHN1YmplY3QgfCB3aGF0IGRvIHRpdGxlIHwgaG93IGRlYWwgdGl0bGUgfCB3aGF0IG1hbmFnZSB0aXRsZSB8IGhvdyBtYW5hZ2UgdGl0bGUgfCB3aGF0IG1hbmFnZSBzdWJqZWN0IHwgaG93IG1hbmFnZSBzdWJqZWN0IHwgd2hhdCBtYW5hZ2UgdG9waWMgfCBob3cgbWFuYWdlIHRvcGljCltzY3JpcHRdClc6IENvbmdyYXR1bGF0aW9ucywgVG9tISBZb3UgZ2F2ZSBhIHdvbmRlcmZ1bCBzcGVlY2ggeWVzdGVyZGF5IG1vcm5pbmcuCk06IFRoYW5rIHlvdSBNYXJ5LgpXOiBJIHdpbGwgZ2l2ZSBhIHNwZWVjaCBuZXh0IFdlZG5lc2RheSBpbiBteSBFbmdsaXNoIGNsYXNzLCBidXQgSSBhbSBub3QgZnVsbHkgcHJlcGFyZWQgeWV0LiBDYW4geW91IGdpdmUgbWUgc29tZSBhZHZpY2U/Ck06IFN1cmUuIFdoYXQncyB5b3VyIHRvcGljPwpXOiBXZWxsLCBJIGFtIGFsd2F5cyBjb25jZXJuZWQgYWJvdXQgZW52aXJvbm1lbnRhbCBpc3N1ZXMsIHNvIG15IHRvcGljIGlzIEVudmlyb25tZW50YWwgUHJvdGVjdGlvbi4KTTogVGhpcyBpcyBhIGdvb2QgdG9waWMsIGJ1dCBpdCBpcyB0b28gYmlnLgpbcXVlc3Rpb25dCuaIkeivpeWmguS9leWkhOeQhui/meS4qumimOebru+8nwpbbWFjYW5zd2VyXQpZb3UgaGF2ZSB0byBuYXJyb3cgZG93biB5b3VyIHRvcGljLiBGb3IgZXhhbXBsZSwgeW91IG1heSB0YWxrIGFib3V0IHdoYXQgY29sbGVnZSBzdHVkZW50cyBjYW4gZG8gdG8gcHJvdGVjdCBvdXIgZW52aXJvbm1lbnQuIEFmdGVyIHRoYXQsIHlvdSBuZWVkIHRvIGRvIHNvbWUgcmVzZWFyY2ggdG8gY29sbGVjdCByZWxldmFudCBpbmZvcm1hdGlvbiBhcyBtdWNoIGFzIHBvc3NpYmxlLiBUaGVuLCB5b3Ugc2hvdWxkIG9yZ2FuaXplIHlvdXIgYXJndW1lbnRzIHdlbGwuIExvZ2ljYWwgb3JnYW5pemF0aW9uIGlzIHZlcnkgaW1wb3J0YW50Lg=="</string>
<string name="text_en_read_choice">"W2Nob2ljZV0KMS4gU25ha2VzLgoyLiBDaGlsZHJlbi4KMy4gQ2F0cy4KW2tleXdvcmRzXQpjYXRzCltxdWVzdGlvbl0KV2hhdCBkaWQgdGhlIHdvbWFuIGRpc2xpa2U/"</string>
</resources>