<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10dp"
        android:text="课程难度从0-10星进行选择"
        >
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/stu_number"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/Course"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/stu_name"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/place"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        <TextView
            android:id="@+id/stu_age"
            android:textSize="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/diff"
            android:layout_width="0dp"
            android:layout_height="50dp" />

    </LinearLayout>

</LinearLayout>