<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pyrojewel.ui.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/frame_1"
            android:clipToOutline="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal|top"
                android:text="@string/settings"
                android:textAppearance="@style/settings" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="276dp"
            android:layout_height="173dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:background="@color/white"
            android:clipToOutline="true">

            <View
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="32.0dp"
                android:background="@drawable/headimage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="21dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="103dp"
                android:layout_marginTop="123dp"
                android:gravity="top"
                android:lineSpacingExtra="4sp"
                android:text="@string/name_id"
                android:textAppearance="@style/name_id"
                android:translationY="-2sp" />

            <TextView
                android:layout_width="111dp"
                android:layout_height="23dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="93dp"
                android:layout_marginTop="146dp"
                android:gravity="top"
                android:lineSpacingExtra="4sp"
                android:text="@string/ddl_"
                android:textAppearance="@style/ddl_"
                android:translationY="-2sp" />
        </RelativeLayout>


        <GridLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/courseImport"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_13"
                    android:scaleType="center"
                    android:src="@drawable/vector4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/text1"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/Course"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_13"
                    android:scaleType="center"
                    android:src="@drawable/vector2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/text2"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/model_11"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_13"
                    android:scaleType="center"
                    android:src="@drawable/vector1" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/text3"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/model_23"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_13"
                    android:scaleType="center"
                    android:src="@drawable/vector6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/text4"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_13"
                    android:scaleType="center"
                    android:src="@drawable/vector3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/text5"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/model_22"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:background="@drawable/rectangle_13"
                    android:scaleType="center"
                    android:src="@drawable/vector5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:text="@string/text5"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </GridLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>